--- a/index.html
+++ b/index.html
@@ -1599,7 +1599,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="logo">
-                    <div class="logo-img">
+                     <img src="img/ttm.png" alt="QCprotektado Logo" />
                         <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
                             <circle cx="50" cy="50" r="45" fill="#1565C0" />
                             <rect x="30" y="30" width="40" height="40" fill="white" />
@@ -1912,8 +1912,8 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-text">
-                    <h2>About QCtrafficHub</h2>
-                    <p>QCtrafficHub is Quezon City's comprehensive traffic and transport management system, designed to improve urban mobility and reduce congestion throughout the city.</p>
+                    <h2>About Traffic and Transport</h2>
+                    <p>Traffic and Transport is Quezon City's comprehensive traffic and transport management system, designed to improve urban mobility and reduce congestion throughout the city.</p>
                     <p>Our system integrates real-time traffic monitoring, intelligent traffic signal control, public transport coordination, and incident response management into a single platform.</p>
                     <p>With advanced technologies and a dedicated team of traffic management professionals, we work to ensure safer and more efficient transportation for all residents and visitors of Quezon City.</p>
                 </div>
