--- a/index.html
+++ b/index.html
@@ -1609,7 +1609,7 @@
                             <circle cx="60" cy="60" r="5" fill="#1565C0" />
                         </svg>
                     </div>
-                    <div class="logo-text">Traffic and Transport Management</div>
+                    <div class="logo-text">TTM</div>
                 </div>
                 
                 <nav id="nav">
@@ -2105,7 +2105,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2023 Traffic and Transport Management - Quezon City Traffic & Transport Management System. All rights reserved.</p>
+                <p>&copy; 2025 Traffic and Transport Management - Quezon City Traffic & Transport Management System. All rights reserved.</p>
             </div>
         </div>
     </footer>
