--- a/dashboard.html
+++ b/dashboard.html
@@ -33,7 +33,7 @@
       </a>
       <ul class="side-menu top">
         <li>
-          <a href="../index.html">
+          <a href="../index.html" class="active">
             <i class="bx bxs-dashboard"></i>
             <span class="text">Dashboard</span>
           </a>
@@ -41,43 +41,43 @@
         <span class="separator">Main</span>
       
         <li>
-          <a href="admin/TM/index.html">
-            <i class="bx bx-cctv"></i>
+          <a href="admin/TM/index.php">
+            <i class="bx bx-car"></i>
             <span class="text">Traffic Monitoring (CCTV) </span>
           </a>
         </li>
         <li>
-          <a href="RTR/index.html">
-            <i class="bx bx-road"></i>
+          <a href="RTR/index.php">
+            <i class="bx bx-directions routing"></i>
             <span class="text">Real-Time Road Updates</span>
           </a>
         </li>
         <li>
-          <a href="#">
-            <i class="bx bx-car-crash"></i>
+          <a href="AVR/index.php">
+            <i class="bx bx-bell"></i>
             <span class="text"> Accident & Violation Reports </span>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="VRD/index.php">
             <i class="bx bx-route"></i>
             <span class="text">Vehicle Routing & Diversion</span>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="TSC/index.php">
             <i class="bx bx-traffic-light"></i>
             <span class="text"> Traffic Signal Control</span>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="PT/index.php">
             <i class="bx bx-bus"></i>
             <span class="text">Public Transport Sync </span>
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="PTS/index.php">
             <i class="bx bx-id-card"></i>
             <span class="text">Permit & Ticketing System</span>
           </a>
