--- a/dashboard.html
+++ b/dashboard.html
@@ -41,13 +41,13 @@
         <span class="separator">Main</span>
       
         <li>
-          <a href="admin/TM/index.php">
+          <a href="admin/TM/index.html">
             <i class="bx bx-car"></i>
             <span class="text">Traffic Monitoring (CCTV) </span>
           </a>
         </li>
         <li>
-          <a href="RTR/index.php">
+          <a href="RTR/index.html">
             <i class="bx bx-directions routing"></i>
             <span class="text">Real-Time Road Updates</span>
           </a>
