--- a/dashboard.html
+++ b/dashboard.html
@@ -60,25 +60,25 @@
         </li>
         <li>
           <a href="VRD/index.php">
-            <i class="bx bx-route"></i>
+            <i class="bx bx-map"></i>
             <span class="text">Vehicle Routing & Diversion</span>
           </a>
         </li>
         <li>
           <a href="TSC/index.php">
-            <i class="bx bx-traffic-light"></i>
+            <i class="bx bx-toggle-left"></i>
             <span class="text"> Traffic Signal Control</span>
           </a>
         </li>
         <li>
           <a href="PT/index.php">
-            <i class="bx bx-bus"></i>
+            <i class="bx bx-train"></i>
             <span class="text">Public Transport Sync </span>
           </a>
         </li>
         <li>
           <a href="PTS/index.php">
-            <i class="bx bx-id-card"></i>
+            <i class="bx bx-id-receipt"></i>
             <span class="text">Permit & Ticketing System</span>
           </a>
         </li>
